# ecoord

./: Cargo.toml  README.md
crates/ecoord/: Cargo.toml  README.md
crates/ecoord-cli/: Cargo.toml  README.md
crates/ecoord-cli/src/: arguments.rs  cli.rs  error.rs  main.rs  util.rs
crates/ecoord-cli/src/commands/: convert.rs  convert_kitti.rs  convert_tabular.rs  mod.rs  stats.rs
crates/ecoord-core/: Cargo.toml  README.md
crates/ecoord-core/src/: channel_info.rs  error.rs  frame_graph.rs  frame_info.rs  frames.rs  isometry_graph.rs  lib.rs  reference_frames.rs  transform.rs  transform_edge.rs  transform_info.rs  transform_tree.rs  transforms_interpolation.rs
crates/ecoord-core/src/coords/: bounding_box.rs  error.rs  mod.rs  morton.rs  spherical_point.rs  unit_spherical_point.rs
crates/ecoord-core/src/octree/: bounds.rs  graph.rs  index.rs  mod.rs  octree.rs
crates/ecoord-core/src/ops/: filter.rs  merge.rs  mod.rs
crates/ecoord-core/src/utils/: mod.rs  transform_list_utils.rs  transforms_interpolation.rs
crates/ecoord-io/: Cargo.toml  README.md
crates/ecoord-io/src/: documents.rs  error.rs  lib.rs  read.rs  read_impl.rs  util.rs  write.rs  write_impl.rs
crates/ecoord-io/src/ecoord/: documents.rs  format.rs  mod.rs  read.rs  read_impl.rs  write.rs  write_impl.rs
crates/ecoord-io/src/kitti/: error.rs  mod.rs  read.rs  read_impl.rs
crates/ecoord-io/src/tabular/: mod.rs  read.rs  read_impl.rs
crates/ecoord-transform/: Cargo.toml  README.md
crates/ecoord-transform/src/: error.rs  filter.rs  lib.rs
crates/ecoord/src/: lib.rs
