[workspace]
members = [
    "crates/*",
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.4"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/ecoord"

[workspace.dependencies]
clap = "4.5.13"
thiserror = "1.0.63"
serde = "1.0.204"
serde_json = "1.0.122"
zstd = "0.13.2"
nalgebra = "0.33.0"
chrono = "0.4.38"
itertools = "0.13.0"
indextree = "4.7.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
approx = "0.5.1"
num-traits = "0.2.19"
