[workspace]
members = [
    "crates/*",
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.8"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/ecoord"

[workspace.dependencies]
clap = "4.5.42"
thiserror = "2.0.12"
anyhow = "1.0.98"
serde = "1.0.219"
serde_json = "1.0.142"
csv = "1.3.1"
zstd = "0.13.3"
nalgebra = "0.34.0"
chrono = "0.4.41"
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
approx = "0.5.1"
num-traits = "0.2.19"
rayon = "1.10.0"
petgraph = "0.8.2"
humantime = "2.2.0"
rand = "0.9.2"
