[workspace]
members = [
    "crates/*",
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.10"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/ecoord"

[workspace.dependencies]
clap = "4.5.50"
thiserror = "2.0.17"
anyhow = "1.0.100"
serde = "1.0.228"
serde_json = "1.0.145"
csv = "1.4.0"
zstd = "0.13.3"
nalgebra = "0.34.1"
chrono = "0.4.42"
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
approx = "0.5.1"
num-traits = "0.2.19"
rayon = "1.11.0"
petgraph = "0.8.3"
humantime = "2.3.0"
rand = "0.9.2"
walkdir = "2.5.0"
strum = "0.27.2"
strum_macros = "0.27.2"
