[package]
name = "ecoord-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core transformations and operations between 3D coordinate frames."


[dependencies]
thiserror = { workspace = true }
itertools = { workspace = true }
indextree = { workspace = true }
chrono = { workspace = true }
nalgebra = { workspace = true }
approx = { workspace = true }
num-traits = { workspace = true }
