[package]
name = "ecoord-transform"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Supplementary operations for transformations between 3D coordinate frames."

[dependencies]
ecoord-core = { version = "0.0.1-alpha.2", path = "../ecoord-core" }

thiserror = { workspace = true }
itertools = { workspace = true }
indextree = { workspace = true }
chrono = { workspace = true }
