[package]
name = "ecoord"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for representing 3D coordinate frames and transforms"

[features]

[dependencies]
ecoord-core = { version = "0.0.1-alpha.1", path = "../ecoord-core", registry = "custom" }
ecoord-io = { version = "0.0.1-alpha.1", path = "../ecoord-io", registry = "custom" }
