[package]
name = "ecoord"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Transformations between 3D coordinate frames."

[features]

[dependencies]
ecoord-core = { version = "0.0.1-alpha.2", path = "../ecoord-core" }
ecoord-transform = { version = "0.0.1-alpha.2", path = "../ecoord-transform" }
ecoord-io = { version = "0.0.1-alpha.2", path = "../ecoord-io" }
